Fix spacing between footer and main content

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -39,3 +39,7 @@ main > * {
     margin-right: 20px;
   }
 }
+
+main {
+  margin-bottom: 3em;
+}
